--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,14 @@ td {
 
 #row_or_col_container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+@media (min-aspect-ratio: 5/4) {
+    #row_or_col_container {
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 .row {
